fix overflow, pagination wrap, no countries found

--- a/src/App.css
+++ b/src/App.css
@@ -203,7 +203,7 @@
 }
 @media (max-width: 540px) {
   .countries__card {
-    max-height: 15rem;
+    max-height: 17rem;
   }
 }
 
@@ -368,6 +368,7 @@
   font-size: 1rem;
   margin-top: 2rem;
   margin-bottom: 1rem;
+  flex-wrap: wrap;
 }
 
 .pagination.darkMode {
